--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="" />
   <title>Numismatis | CNFT Collections</title>
   <!-- Favicon-->
-  <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="assets/img/Logo_White.png" />
   <!-- Font Awesome icons (free version)-->
   <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
   <!-- Google fonts-->
@@ -23,7 +23,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand" href="#page-top">
-        <img src="assets/img/Logo_White.png" alt="cardano_nft_logo" /> Numismatis</a>
+        <img src="assets/img/Logo_White.png" alt="cardano_nft_logo" /> <img class="img-fluid" src="assets/img/Numismatis_white.png" alt="numismatis_logo" style="color:white"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ms-1"></i>
@@ -34,7 +34,7 @@
           <li class="nav-item"><a class="nav-link" href="#visions">OUR VISION</a></li>
           <li class="nav-item"><a class="nav-link" href="#collections">COLLECTIONS</a></li>
           <li class="nav-item"><a class="nav-link" href="#purchase">PURCHASE</a></li>
-          <li class="nav-item"><a class="nav-link" href="#contact">CONTACT</a></li>
+          <!--li class="nav-item"><a class="nav-link" href="#contact">CONTACT</a></!--li-->
         </ul>
       </div>
     </div>
@@ -42,12 +42,10 @@
   <!-- Masthead-->
   <header class="masthead" id="aboutus">
     <div class="container">
-      <img class="img-fluid" src="assets/img/Numismatis.png" alt="cardano_nft_logo" />
-      <div class="masthead-subheading">AN NFT PROJECT ON CARDANO</div>
-      <div class="masthead-paragraph">"Numismatis" is the ancient Latin word for "coins", and nowadays, its derivation sigifies the collection of coins. Among all kind of coins, commemorative coins are <strong>no normal</strong>, because it is a remark to remember the history of civilisation.</div>
-      <div class="masthead-paragraph">On its foundation, Carano is not built only with science and advanced technologies, but also with <strong>symbols, commemoration</strong>, and with the <strong>true care for humankind</strong>.</div>
-      <div class="masthead-paragraph">Having the same spirit, we desire to contribute tot he memory of the development of Cardano with the minting commemorative NFT coins by a vivid way, through <strong>3D and AR technology</strong>.</div>
-      <a class="btn btn-dark btn-xl text-uppercase" href="#visions">Tell Me More</a>
+      <img class="img-fluid" src="assets/img/Numismatis.png" alt="numismatis_logo_black" />
+      <div class="masthead-subheading my-4">AN NFT PROJECT ON CARDANO</div>
+
+      <a class="btn btn-dark btn-xl text-uppercase mt-5" href="#visions">Tell Me More</a>
     </div>
   </header>
   <!-- Vision-->
@@ -60,15 +58,15 @@
       <div class="row text-center">
         <div class="col-md-4">
           <h4 class="my-3 text-light">Collection</h4>
-          <p class="text-muted">Our main priority is to mint NFT coin collections with the themes of Cardano. Each collection is limited to a certain number of tokens, which ensures their rarity and value</p>
+          <p class="text-muted mx-2">Each of our projects is an NFT collection in special themes. Depends on the purpose of the Collection, NFTs will be minted uniquely or in a limited number.</p>
         </div>
         <div class="col-md-4">
-          <h4 class="my-3 text-light">Commemoration</h4>
-          <p class="text-muted">Each collection is designed to commemorate the development of the Cardano Community, our achievement, figures and symbols, significant events of the system</p>
+          <h4 class="my-3 text-light">Community</h4>
+          <p class="text-muted mx-2">For every 1000 NFT sold, we engage to donate $1000 to a charity foundation of community choice.</p>
         </div>
         <div class="col-md-4">
           <h4 class="my-3 text-light">Experience</h4>
-          <p class="text-muted">We engage to deliver collections with a new, vivid experience by 3D and AR technology</p>
+          <p class="text-muted mx-2">We engage to deliver collections with a new, vivid experience by 3D and AR technology</p>
         </div>
       </div>
     </div>
@@ -80,79 +78,127 @@
         <h2 class="section-heading text-uppercase">Our Collection</h2>
         <h3 class="section-subheading text-muted">What do we deliver now?</h3>
       </div>
-      <div class="row">
-        <div class="col-lg-4 col-sm-6 mb-4">
-          <!-- Collections item 1-->
-          <div class="collections-item">
-            <a class="collections-link" data-bs-toggle="modal" href="#collectionsModal1">
-              <div class="collections-hover">
-                <div class="collections-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+      <div class="mb-5"><img class="img-thumbnail" src="assets/img/cardano_summit_banner.png" alt="">
+      </div>
+      <div id="accordion" class="my-5">
+        <div class="card">
+          <div class="card-header" id="headingOne">
+            <div class="row">
+              <img class="col-md-4 img-thumbnail-collapse" src="assets/img/cardano_summit.png" alt="cardano_summit_collection_thumbnail">
+              <div class="col-md-7 ms-3">
+                <h2 class="div">Cardano Summit Collection</h2>
+
+                <p><span class="fs-5 fw-bold">Description: </span>Collection's description</p>
+                <p><span class="fs-5 fw-bold">Opening Sale: </span>September 24, 2021</p>
+
+                <button class="btn btn-outline-dark mt-2" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                  Explore
+                </button>
               </div>
-              <img class="img-fluid" src="assets/img/continents/America-crop.png" alt="..." />
-            </a>
-            <div class="collections-caption">
-              <div class="collections-caption-heading">Americas</div>
-              <div class="collections-caption-subheading text-muted"></div>
+            </div>
+          </div>
+
+          <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-bs-parent="#accordion">
+            <div class="card-body">
+              <div class="row">
+                <div class="text-center fs-2 fw-bold mb-5">Continents</div>
+                <div class="col-lg-4 col-sm-6 mb-4">
+                  <!-- Collections item 1-->
+                  <div class="collections-item">
+                    <a class="collections-link" data-bs-toggle="modal" href="#collectionsModal1">
+                      <div class="collections-hover">
+                        <div class="collections-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                      </div>
+                      <img class="img-fluid" src="assets/img/continents/America-crop.png" alt="..." />
+                    </a>
+                    <div class="collections-caption">
+                      <div class="collections-caption-heading">Americas</div>
+                      <div class="collections-caption-subheading text-muted"></div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 mb-4">
+                  <!-- Collections item 2-->
+                  <div class="collections-item">
+                    <a class="collections-link" data-bs-toggle="modal" href="#collectionsModal2">
+                      <div class="collections-hover">
+                        <div class="collections-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                      </div>
+                      <img class="img-fluid" src="assets/img/continents/Africa-crop.png" alt="..." />
+                    </a>
+                    <div class="collections-caption">
+                      <div class="collections-caption-heading">Africa</div>
+                      <div class="collections-caption-subheading text-muted"></div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 mb-4">
+                  <!-- Collections item 3-->
+                  <div class="collections-item">
+                    <a class="collections-link" data-bs-toggle="modal" href="#collectionsModal3">
+                      <div class="collections-hover">
+                        <div class="collections-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                      </div>
+                      <img class="img-fluid" src="assets/img/continents/Asia-crop.png" alt="..." />
+                    </a>
+                    <div class="collections-caption">
+                      <div class="collections-caption-heading">Asia</div>
+                      <div class="collections-caption-subheading text-muted"></div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
+                  <!-- Collections item 4-->
+                  <div class="collections-item">
+                    <a class="collections-link" data-bs-toggle="modal" href="#collectionsModal4">
+                      <div class="collections-hover">
+                        <div class="collections-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                      </div>
+                      <img class="img-fluid" src="assets/img/continents/Europe-crop.png" alt="..." />
+                    </a>
+                    <div class="collections-caption">
+                      <div class="collections-caption-heading">Europe</div>
+                      <div class="collections-caption-subheading text-muted"></div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
+                  <!-- Collections item 5-->
+                  <div class="collections-item">
+                    <a class="collections-link" data-bs-toggle="modal" href="#collectionsModal5">
+                      <div class="collections-hover">
+                        <div class="collections-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                      </div>
+                      <img class="img-fluid" src="assets/img/continents/Oceania-crop.png" alt="..." />
+                    </a>
+                    <div class="collections-caption">
+                      <div class="collections-caption-heading">Oceania</div>
+                      <div class="collections-caption-subheading text-muted"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-        <div class="col-lg-4 col-sm-6 mb-4">
-          <!-- Collections item 2-->
-          <div class="collections-item">
-            <a class="collections-link" data-bs-toggle="modal" href="#collectionsModal2">
-              <div class="collections-hover">
-                <div class="collections-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+        <div class="card">
+          <div class="card-header" id="headingOne">
+            <div class="row">
+              <img class="col-md-4 img-thumbnail-collapse" src="assets/img/2euro.jpg" alt="2_euro_collection_thumbnail">
+              <div class="col-md-7 ms-3">
+                <h2 class="div">2 Euro Collection</h2>
+
+                <p><span class="fs-5 fw-bold">Description: </span>Collection's description</p>
+                <p><span class="fs-5 fw-bold">Opening Sale: </span>Coming Soon!</p>
+
+                <button class="btn btn-outline-dark mt-2" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" disabled>
+                  Explore
+                </button>
               </div>
-              <img class="img-fluid" src="assets/img/continents/Africa-crop.png" alt="..." />
-            </a>
-            <div class="collections-caption">
-              <div class="collections-caption-heading">Africa</div>
-              <div class="collections-caption-subheading text-muted"></div>
             </div>
           </div>
-        </div>
-        <div class="col-lg-4 col-sm-6 mb-4">
-          <!-- Collections item 3-->
-          <div class="collections-item">
-            <a class="collections-link" data-bs-toggle="modal" href="#collectionsModal3">
-              <div class="collections-hover">
-                <div class="collections-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-              </div>
-              <img class="img-fluid" src="assets/img/continents/Asia-crop.png" alt="..." />
-            </a>
-            <div class="collections-caption">
-              <div class="collections-caption-heading">Asia</div>
-              <div class="collections-caption-subheading text-muted"></div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
-          <!-- Collections item 4-->
-          <div class="collections-item">
-            <a class="collections-link" data-bs-toggle="modal" href="#collectionsModal4">
-              <div class="collections-hover">
-                <div class="collections-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-              </div>
-              <img class="img-fluid" src="assets/img/continents/Europe-crop.png" alt="..." />
-            </a>
-            <div class="collections-caption">
-              <div class="collections-caption-heading">Europe</div>
-              <div class="collections-caption-subheading text-muted"></div>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
-          <!-- Collections item 5-->
-          <div class="collections-item">
-            <a class="collections-link" data-bs-toggle="modal" href="#collectionsModal5">
-              <div class="collections-hover">
-                <div class="collections-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-              </div>
-              <img class="img-fluid" src="assets/img/continents/Oceania-crop.png" alt="..." />
-            </a>
-            <div class="collections-caption">
-              <div class="collections-caption-heading">Oceania</div>
-              <div class="collections-caption-subheading text-muted"></div>
+          <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-bs-parent="#accordion">
+            <div class="card-body">
             </div>
           </div>
         </div>
@@ -171,30 +217,38 @@
         <div class="col-lg-8 mx-auto text-center">
           <p class="large text-light">For <strong>Cardano Summit 2021 Collection</strong>, each country has 2 versions 3D and AR. Each version for each country has the max supply of 50 NFTs to be minted.</p>
           <p class="text-light">
-            <Strong>Policy ID:</Strong> </p>
+            <Strong>Policy ID:</Strong> f9f6d15fe145146d193f89b930bc757516fac7f6bbc2eb6aee7028ea</p>
         </div>
       </div>
-      <select class="form-select w-50 mx-auto" aria-label="Default select example" id="purchaseSelect">
+      <!--select class="form-select w-50 mx-auto" aria-label="Default select example" id="purchaseSelect">
         <option selected>Select version</option>
         <option value="1">3D</option>
         <option value="2">AR</option>
-      </select>
-      <div class="col-lg-10 mx-auto" id="purchaseDetail" style="display:none">
+      </!--select-->
+      <div class="col-lg-10 mx-auto" id="purchaseDetail">
 
         <div class="row">
           <div class="col-lg-8 mx-auto my-4 text-center">
-            <p class="text-light">Choose well the amount of NFTs you want to purchase:</p>
-            <p class="text-light">01 NFT = <span id="price1NFT"></span> ADA</p>
-            <p class="text-light">02 NFTs = <span id="price2NFT"></span> ADA</p>
-            <p class="text-light">05 NFTs = <span id="price5NFT"></span> ADA</p>
+            <div class="row">
+              <p class="text-light">Choose well the amount of NFTs you want to purchase:</p>
+              <p class="col-lg-6 order-lg-6 text-light">01 NFT = <span id="price1NFT">25</span> ADA</p>
+              <p class="col-lg-6 order-lg-2 text-light">02 NFTs = <span id="price2NFT">50</span> ADA</p>
+              <p class="col-lg-6 order-lg-4 text-light">03 NFTs = <span id="price2NFT">75</span> ADA</p>
+              <p class="col-lg-6 order-lg-6 text-light">04 NFTs = <span id="price5NFT">100</span> ADA</p>
+              <p class="col-lg-6 order-lg-3 text-light">05 NFTs = <span id="price5NFT">125</span> ADA</p>
+              <p class="col-lg-6 order-lg-5 text-light">10 NFTs = <span id="price5NFT">250</span> ADA</p>
+            </div>
+
           </div>
-        </div>
-        <div class="row">
-          <div class="btn btn-light btn-sm mx-auto w-25 mb-5 fs-5"><strong>Buy</strong></div>
         </div>
 
         <div class="row">
-          <div class="col-lg-7 text-start text-light p-3">
+          <button class="btn btn-light w-25 mx-auto mb-3" type="button" data-bs-toggle="collapse" data-bs-target="#purchaseNote" aria-expanded="true" aria-controls="purchaseNote">Buy</button>
+
+        </div>
+
+        <div class="row collapse purchaseNote" id="purchaseNote">
+          <div class="col-lg-5 text-start text-light p-3">
             <div class="text-light text-decoration-underline fs-3 my-2">Note:</div>
             <div class="text-light">1. Do not send ADA from your Exchange Wallet.</div>
             <div class="text-light">2. Only send ADA from Wallets which support Cardano Native assests, such as Yoroi, Adalite, Nami, etc.</div>
@@ -202,7 +256,12 @@
             <div class="text-light">4. We do not have any private sales on any other platforms.</div>
           </div>
 
-          <div class="col-lg-4 text-center text-dark bg-light m-3" style="height:400px">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi aspernatur esse modi officia vitae impedit nesciunt excepturi non quo ut.</div>
+          <div class="col-lg-6 text-break text-wrap text-center text-dark bg-light m-3 ">
+            <strong>Address: </strong>
+            <p> addr1vy4utpe6neh6h7keap8ynnumch2k97g0fd6snl39q4csdlg4gy9ae</p>
+            <img class="img-fluid" src="assets/img/QR Code Address.png" alt="">
+            <p>Send the exact amount of ADA to this address.</p>
+          </div>
         </div>
       </div>
 
@@ -218,11 +277,9 @@
       </div>
       <div class="row">
         <div class="text-center">
-          <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-          <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-          <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-linkedin-in"></i></a>
+          <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/numismatis_cnft" target="_blank"><i class="fab fa-twitter"></i></a>
+          <a class="btn btn-dark btn-social mx-2" href="https://discord.gg/zdVwKB4k" target="_blank"><i class="fab fa-discord"></i></a>
         </div>
-        <div class="col-lg-4 text-lg-end"></div>
       </div>
 
 
