--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
       <a class="navbar-brand" href="#page-top">
-        <img src="assets/img/Logo_White.png" alt="cardano_nft_logo" /> <img class="img-fluid" src="assets/img/Numismatis_white.png" alt="numismatis_logo" style="color:white"></a>
+        <img src="assets/img/Logo_White.png" alt="cardano_nft_logo" /> <img class="img-fluid w-75" src="assets/img/Numismatis_white.png" alt="numismatis_logo" style="color:white"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ms-1"></i>
@@ -58,15 +58,16 @@
       <div class="row text-center">
         <div class="col-md-4">
           <h4 class="my-3 text-light">Collection</h4>
-          <p class="text-muted mx-2">Each of our projects is an NFT collection in special themes. Depends on the purpose of the Collection, NFTs will be minted uniquely or in a limited number.</p>
+          <p class="text-muted mx-2">No automatically generated NFTs, each NFT was and will be created by by our hands. Each NFT collection will be in special themes. Depends on the purpose of the Collection, NFTs will be created and minted uniquely or in very limited number.</p>
         </div>
         <div class="col-md-4">
           <h4 class="my-3 text-light">Community</h4>
-          <p class="text-muted mx-2">For every 1000 NFT sold, we engage to donate $1000 to a charity foundation of community choice.</p>
+          <p class="text-muted mx-2">We acknowledge that the Community is in the heart of any NFT project. With that in mind, we create and deliver NFTs Collection with affordable price tags and great contribution to the Community. For every 1000 NFT sold, we engage to donate $1000
+            to a charity chosen and in the name of the “Cardano NFT Community”.</p>
         </div>
         <div class="col-md-4">
           <h4 class="my-3 text-light">Experience</h4>
-          <p class="text-muted mx-2">We engage to deliver collections with a new, vivid experience by 3D and AR technology</p>
+          <p class="text-muted mx-2">NFTs on Cardano still has great potential to grow and expand. As that, we engage to deliver NFT collections with a new, vivid experience by 3D and Augmented Reality technology, which allows our users to interact with the NFTs just by their phones.</p>
         </div>
       </div>
     </div>
@@ -88,7 +89,9 @@
               <div class="col-md-7 ms-3">
                 <h2 class="div">Cardano Summit Collection</h2>
 
-                <p><span class="fs-5 fw-bold">Description: </span>Collection's description</p>
+                <p class=""><span class="fs-5 fw-bold">Description: </span>Cardano Summit 2021 is the biggest ever event to bring the world on Cardano. To commemorate this event, we created and deliver to the Community a Commemorative Coins collection, which features
+                  5 continents and 100 countries all over the world.</p>
+                <p><span class="fs-5 fw-bold">Total supply: </span>10000 NFTs (3D and AR versions)</p>
                 <p><span class="fs-5 fw-bold">Opening Sale: </span>September 24, 2021</p>
 
                 <button class="btn btn-outline-dark mt-2" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
@@ -109,7 +112,7 @@
                       <div class="collections-hover">
                         <div class="collections-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                       </div>
-                      <img class="img-fluid" src="assets/img/continents/America-crop.png" alt="..." />
+                      <img class="img-fluid" src="assets/img/continents/America-summit-crop.png" alt="..." />
                     </a>
                     <div class="collections-caption">
                       <div class="collections-caption-heading">Americas</div>
@@ -124,7 +127,7 @@
                       <div class="collections-hover">
                         <div class="collections-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                       </div>
-                      <img class="img-fluid" src="assets/img/continents/Africa-crop.png" alt="..." />
+                      <img class="img-fluid" src="assets/img/continents/Africa-summit-crop.png" alt="..." />
                     </a>
                     <div class="collections-caption">
                       <div class="collections-caption-heading">Africa</div>
@@ -139,7 +142,7 @@
                       <div class="collections-hover">
                         <div class="collections-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                       </div>
-                      <img class="img-fluid" src="assets/img/continents/Asia-crop.png" alt="..." />
+                      <img class="img-fluid" src="assets/img/continents/Asia-summit-crop.png" alt="..." />
                     </a>
                     <div class="collections-caption">
                       <div class="collections-caption-heading">Asia</div>
@@ -154,7 +157,7 @@
                       <div class="collections-hover">
                         <div class="collections-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                       </div>
-                      <img class="img-fluid" src="assets/img/continents/Europe-crop.png" alt="..." />
+                      <img class="img-fluid" src="assets/img/continents/Europe-summit-crop.png" alt="..." />
                     </a>
                     <div class="collections-caption">
                       <div class="collections-caption-heading">Europe</div>
@@ -169,7 +172,7 @@
                       <div class="collections-hover">
                         <div class="collections-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                       </div>
-                      <img class="img-fluid" src="assets/img/continents/Oceania-crop.png" alt="..." />
+                      <img class="img-fluid" src="assets/img/continents/Oceania-summit-crop.png" alt="..." />
                     </a>
                     <div class="collections-caption">
                       <div class="collections-caption-heading">Oceania</div>
@@ -182,14 +185,13 @@
           </div>
         </div>
         <div class="card">
-          <div class="card-header" id="headingOne">
+          <div class="card-header" id="headingTwo">
             <div class="row">
               <img class="col-md-4 img-thumbnail-collapse" src="assets/img/2euro.jpg" alt="2_euro_collection_thumbnail">
               <div class="col-md-7 ms-3">
                 <h2 class="div">2 Euro Collection</h2>
 
-                <p><span class="fs-5 fw-bold">Description: </span>Collection's description</p>
-                <p><span class="fs-5 fw-bold">Opening Sale: </span>Coming Soon!</p>
+                <p><span class="fs-5 fw-bold">Coming Soon!</span></p>
 
                 <button class="btn btn-outline-dark mt-2" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" disabled>
                   Explore
@@ -216,7 +218,7 @@
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
           <p class="large text-light">For <strong>Cardano Summit 2021 Collection</strong>, each country has 2 versions 3D and AR. Each version for each country has the max supply of 50 NFTs to be minted.</p>
-          <p class="text-light">
+          <p class="text-light text-break">
             <Strong>Policy ID:</Strong> f9f6d15fe145146d193f89b930bc757516fac7f6bbc2eb6aee7028ea</p>
         </div>
       </div>
@@ -233,10 +235,10 @@
               <p class="text-light">Choose well the amount of NFTs you want to purchase:</p>
               <p class="col-lg-6 order-lg-6 text-light">01 NFT = <span id="price1NFT">25</span> ADA</p>
               <p class="col-lg-6 order-lg-2 text-light">02 NFTs = <span id="price2NFT">50</span> ADA</p>
-              <p class="col-lg-6 order-lg-4 text-light">03 NFTs = <span id="price2NFT">75</span> ADA</p>
-              <p class="col-lg-6 order-lg-6 text-light">04 NFTs = <span id="price5NFT">100</span> ADA</p>
-              <p class="col-lg-6 order-lg-3 text-light">05 NFTs = <span id="price5NFT">125</span> ADA</p>
-              <p class="col-lg-6 order-lg-5 text-light">10 NFTs = <span id="price5NFT">250</span> ADA</p>
+              <p class="col-lg-6 order-lg-4 text-light">05 NFTs = <span id="price2NFT">125</span> ADA</p>
+              <p class="col-lg-6 order-lg-6 text-light">10 NFTs = <span id="price5NFT">250</span> ADA *</p>
+              <p class="col-lg-6 order-lg-3 text-light">20 NFTs = <span id="price5NFT">500</span> ADA *</p>
+              <p class="col-lg-6 order-lg-5 text-light">50 NFTs = <span id="price5NFT">1250</span> ADA *</p>
             </div>
 
           </div>
@@ -248,15 +250,17 @@
         </div>
 
         <div class="row collapse purchaseNote" id="purchaseNote">
-          <div class="col-lg-5 text-start text-light p-3">
+          <div class="col-lg-6 text-start text-light p-3">
             <div class="text-light text-decoration-underline fs-3 my-2">Note:</div>
-            <div class="text-light">1. Do not send ADA from your Exchange Wallet.</div>
-            <div class="text-light">2. Only send ADA from Wallets which support Cardano Native assests, such as Yoroi, Adalite, Nami, etc.</div>
-            <div class="text-light">3. We cannot refund in any case. Please choose well the NFT version you want and send the correct amount of ADA.</div>
-            <div class="text-light">4. We do not have any private sales on any other platforms.</div>
+            <div class="text-light">*. We have a great giveaway for these options. Join us on Twitter and Discord for information.</div>
+            <div class="text-light">1. Please use pool.pm to see your NFTs in your address.</div>
+            <div class="text-light">2. Do not send ADA from your Exchange Wallet.</div>
+            <div class="text-light">3. Only send ADA from Wallets which support Cardano Native assests, such as Yoroi, Adalite, Nami, etc.</div>
+            <div class="text-light">4. We cannot refund in any case. Please choose well the NFT version you want and send the correct amount of ADA.</div>
+            <div class="text-light">5. We do not have any private sales on any other platforms.</div>
           </div>
 
-          <div class="col-lg-6 text-break text-wrap text-center text-dark bg-light m-3 ">
+          <div class="col-lg-5 text-break text-wrap text-center text-dark bg-light m-3 ">
             <strong>Address: </strong>
             <p> addr1vy4utpe6neh6h7keap8ynnumch2k97g0fd6snl39q4csdlg4gy9ae</p>
             <img class="img-fluid" src="assets/img/QR Code Address.png" alt="">
@@ -277,8 +281,8 @@
       </div>
       <div class="row">
         <div class="text-center">
-          <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/numismatis_cnft" target="_blank"><i class="fab fa-twitter"></i></a>
-          <a class="btn btn-dark btn-social mx-2" href="https://discord.gg/zdVwKB4k" target="_blank"><i class="fab fa-discord"></i></a>
+          <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/numismatis_cnft" target="_blank" rel="noopener"><i class="fab fa-twitter"></i></a>
+          <a class="btn btn-dark btn-social mx-2" href="https://discord.gg/zdVwKB4k" target="_blank" rel="noopener"><i class="fab fa-discord"></i></a>
         </div>
       </div>
 
