--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
       <div class="row text-center">
         <div class="col-md-4">
           <h4 class="my-3 text-light">Collection</h4>
-          <p class="text-muted mx-2">No automatically generated NFTs, each NFT was and will be created by by our hands. Each NFT collection will be in special themes. Depends on the purpose of the Collection, NFTs will be created and minted uniquely or in very limited number.</p>
+          <p class="text-muted mx-2">No automatically generated NFTs, each NFT was and will be created by our own hands. Each NFT collection will be in special themes. Depend on the purpose of the Collection, NFTs will be created and minted uniquely or in very limited number.</p>
         </div>
         <div class="col-md-4">
           <h4 class="my-3 text-light">Community</h4>
-          <p class="text-muted mx-2">We acknowledge that the Community is in the heart of any NFT project. With that in mind, we create and deliver NFTs Collection with affordable price tags and great contribution to the Community. For every 1000 NFT sold, we engage to donate $1000
-            to a charity chosen and in the name of the “Cardano NFT Community”.</p>
+          <p class="text-muted mx-2">We acknowledge that the Community is in the heart of any NFT project. With that in mind, we create and deliver NFT Collections with affordable price tags and great contribution to the Community. For every 1000 NFTs sold, we engage to donate
+            $1000 to a charity chosen by and in the name of the “Cardano NFT Community”.</p>
         </div>
         <div class="col-md-4">
           <h4 class="my-3 text-light">Experience</h4>
-          <p class="text-muted mx-2">NFTs on Cardano still has great potential to grow and expand. As that, we engage to deliver NFT collections with a new, vivid experience by 3D and Augmented Reality technology, which allows our users to interact with the NFTs just by their phones.</p>
+          <p class="text-muted mx-2">NFT on Cardano still has great potential to grow and expand. As that, we engage to deliver NFT Collections with a new, vivid experience by 3D and Augmented Reality technology, which allows our users to interact with the NFTs just on their phones.</p>
         </div>
       </div>
     </div>
@@ -92,7 +92,7 @@
                 <p class=""><span class="fs-5 fw-bold">Description: </span>Cardano Summit 2021 is the biggest ever event to bring the world on Cardano. To commemorate this event, we created and deliver to the Community a Commemorative Coins collection, which features
                   5 continents and 100 countries all over the world.</p>
                 <p><span class="fs-5 fw-bold">Total supply: </span>10000 NFTs (3D and AR versions)</p>
-                <p><span class="fs-5 fw-bold">Opening Sale: </span>September 24, 2021</p>
+                <p><span class="fs-5 fw-bold">Opening Sale: </span>09.00 UTC, September 24, 2021</p>
 
                 <button class="btn btn-outline-dark mt-2" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                   Explore
@@ -245,6 +245,8 @@
         </div>
 
         <div class="row">
+          <p class="text-light text-center">* We have a great giveaway for these options. Join us on Twitter and Discord for information.</p>
+
           <button class="btn btn-light w-25 mx-auto mb-3" type="button" data-bs-toggle="collapse" data-bs-target="#purchaseNote" aria-expanded="true" aria-controls="purchaseNote">Buy</button>
 
         </div>
@@ -252,8 +254,7 @@
         <div class="row collapse purchaseNote" id="purchaseNote">
           <div class="col-lg-6 text-start text-light p-3">
             <div class="text-light text-decoration-underline fs-3 my-2">Note:</div>
-            <div class="text-light">*. We have a great giveaway for these options. Join us on Twitter and Discord for information.</div>
-            <div class="text-light">1. Please use pool.pm to see your NFTs in your address.</div>
+            <div class="text-light">1. Please use <a href="https://pool.pm/" target="_blank" rel="noopener">pool.pm</a> to see your NFTs in your address.</div>
             <div class="text-light">2. Do not send ADA from your Exchange Wallet.</div>
             <div class="text-light">3. Only send ADA from Wallets which support Cardano Native assests, such as Yoroi, Adalite, Nami, etc.</div>
             <div class="text-light">4. We cannot refund in any case. Please choose well the NFT version you want and send the correct amount of ADA.</div>
@@ -281,8 +282,8 @@
       </div>
       <div class="row">
         <div class="text-center">
-          <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/numismatis_cnft" target="_blank" rel="noopener"><i class="fab fa-twitter"></i></a>
-          <a class="btn btn-dark btn-social mx-2" href="https://discord.gg/zdVwKB4k" target="_blank" rel="noopener"><i class="fab fa-discord"></i></a>
+          <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/numismatis_cnft" target="_blank" rel="noopener"><i class="fab fa-twitter fs-2"></i></a>
+          <a class="btn btn-dark btn-social mx-2" href="https://discord.gg/zdVwKB4k" target="_blank" rel="noopener"><i class="fab fa-discord fs-2"></i></a>
         </div>
       </div>
 
