--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             <div class="text-light">1. Please use <a href="https://pool.pm/" target="_blank" rel="noopener">pool.pm</a> to see your NFTs in your address.</div>
             <div class="text-light">2. Do not send ADA from your Exchange Wallet.</div>
             <div class="text-light">3. Only send ADA from Wallets which support Cardano Native assests, such as Yoroi, Adalite, Nami, etc.</div>
-            <div class="text-light">4. We cannot refund in any case. Please choose well the NFT version you want and send the correct amount of ADA.</div>
+            <div class="text-light">4. We cannot refund in any case. Please choose well the amount NFT you want and send the correct amount of ADA.</div>
             <div class="text-light">5. We do not have any private sales on any other platforms.</div>
           </div>
 
